# datatask

./: .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint-test-cover-docs.yml
datatask/: datatask.py
docs/: conf.py  toc.rst
docs/_source/: datatask.rst
src/datatask/: __init__.py  datatask.py
